Страница info - Время работы бирж

--- a/templates/base.html
+++ b/templates/base.html
@@ -23,10 +23,10 @@
             <a class="p-2 text-black-50" href="/">Главная</a>
         {% endif %}
 
-        {% if request.path == "/info" %}
-            <a class="p-2 text-dark" href="/info">Информация</a>
+        {% if request.path == "/info_test" %}
+            <a class="p-2 text-dark" href="/info_test">Информация</a>
         {% else %}
-            <a class="p-2 text-black-50" href="/info">Информация</a>
+            <a class="p-2 text-black-50" href="/info_test">Информация</a>
         {% endif %}
 
         {% if request.path == "/portfolio" %}
