--- a/templates/exchange_schedule.html
+++ b/templates/exchange_schedule.html
@@ -21,9 +21,15 @@
 <!--    <h6>{{ exchange_schedule }}-->
 
     <label class="list-group-item list-group-item-action py-3">
-        <span class="fw-bold">
+        <div class="text-success fw-bold">
             {{ exchange_ru }}:
-        </span>
+        </div>
+        <div class="small text-muted">
+            {{ exchange_annotation_schedule }}.
+        </div>
+        <div class="small text-muted">
+            {{ exchange_annotation_schedule_per_day }}.
+        </div>
 <!--         Заголовок таблицы с расписанием бирж на сегодня&ndash;&gt;-->
         <li class="list-group-item d-flex justify-content-between align-items-center">
             <span class="col-2 small text-primary"><b>{{ table_head[0] }}</b></span>
