--- a/templates/instruments.html
+++ b/templates/instruments.html
@@ -33,7 +33,7 @@
             <div class="row justify-content-between align-items-center">
                 <span class="col-1 small opacity-75">{{ instrument.ticker }}</span>
                 <span class="col-2 small text-info">{{ instrument.sector }}</span>
-                <span class="col-2 small text-black-50">{{ instrument.exchange }}:
+                <span class="col-2 small text-black-50" title="{{ instrument.exchange_schedule }}">{{ instrument.exchange }}:
                     <!--{{ instrument.trading_status }}-->
                     {% if instrument.trading_status == 5 %}
                         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-clock text-success" viewBox="0 0 16 16">
