--- a/templates/portfolio.html
+++ b/templates/portfolio.html
@@ -7,55 +7,41 @@
 {% block body %}
 <div class="container">
 
-<h1>Портфель</h1>
-<h2>Состав портфеля</h2>
+  <h1>Портфель</h1>
+  <h2>Состав портфеля:</h2>
 
-<div class="col-md-5 col-lg-4 order-md-last">
-        <h4 class="d-flex justify-content-between align-items-center mb-3">
-          <span class="text-primary">Your cart</span>
-          <span class="badge bg-primary rounded-pill">3</span>
-        </h4>
-        <ul class="list-group mb-3">
-          <li class="list-group-item d-flex justify-content-between lh-sm">
-            <div>
-              <h6 class="my-0">Product name</h6>
-              <small class="text-muted">Brief description</small>
-            </div>
-            <span class="text-muted">$12</span>
-          </li>
-          <li class="list-group-item d-flex justify-content-between lh-sm">
-            <div>
-              <h6 class="my-0">Second product</h6>
-              <small class="text-muted">Brief description</small>
-            </div>
-            <span class="text-muted">$8</span>
-          </li>
-          <li class="list-group-item d-flex justify-content-between lh-sm">
-            <div>
-              <h6 class="my-0">Third item</h6>
-              <small class="text-muted">Brief description</small>
-            </div>
-            <span class="text-muted">$5</span>
-          </li>
-          <li class="list-group-item d-flex justify-content-between bg-light">
-            <div class="text-success">
-              <h6 class="my-0">Promo code</h6>
-              <small>EXAMPLECODE</small>
-            </div>
-            <span class="text-success">−$5</span>
-          </li>
-          <li class="list-group-item d-flex justify-content-between">
-            <span>Total (USD)</span>
-            <strong>$20</strong>
-          </li>
-        </ul>
+  {% for portfolio in portfolio_info %}
+    <div class="col-md-5 col-lg-4 order-md-last">
+      <span class="text-primary"> --//-- </span>
+          <h4 class="d-flex justify-content-between align-items-center mb-3">
+            <span class="text-primary">{{ portfolio.account.name }}</span>
+            <span class="badge bg-primary rounded-pill">{{ portfolio.account.id }}</span>
+          </h4>
+          <ul class="list-group mb-3">
 
-        <form class="card p-2">
-          <div class="input-group">
-            <input type="text" class="form-control" placeholder="Promo code">
-            <button type="submit" class="btn btn-secondary">Redeem</button>
-          </div>
-        </form>
-      </div>
+            {% for position in portfolio.positions %}
+              <li class="list-group-item d-flex justify-content-between lh-sm">
+                <div>
+                  <h6 class="my-0">{{ position.name }}</h6>
+                  <small class="text-muted">{{ position.ticker }}</small>
+                </div>
+                <span class="text-muted">{{ position.balance }}</span>
+              </li>
+            {% endfor %}
+              <li class="list-group-item d-flex justify-content-between">
+                <span>Всего по счету:</span>
+                <strong>Сумма</strong>
+              </li>
+
+          </ul>
+
+    </div>
+  {% endfor %}
+
+    <h6 class="col-4 d-block small opacity-50 text-primary">Account: {{ portfolio_info[0].account.id }}</h6>
+    <h6 class="col-5 d-block small opacity-50">Positions: {{ portfolio_info[0].positions }}</h6>
+
 </div>
+
+
 {% endblock %}
