--- a/templates/portfolio.html
+++ b/templates/portfolio.html
@@ -11,35 +11,54 @@
   <h2>Состав портфеля:</h2>
 
   {% for portfolio in portfolio_info %}
+    {% set portfl_sum = namespace(sum=0) %}
     <div class="col-md-5 col-lg-4 order-md-last">
       <span class="text-primary"> --//-- </span>
           <h4 class="d-flex justify-content-between align-items-center mb-3">
             <span class="text-primary">{{ portfolio.account.name }}</span>
-            <span class="badge bg-primary rounded-pill">{{ portfolio.account.id }}</span>
           </h4>
           <ul class="list-group mb-3">
 
             {% for position in portfolio.positions %}
               <li class="list-group-item d-flex justify-content-between lh-sm">
-                <div>
+                <div class="float-left">
                   <h6 class="my-0">{{ position.name }}</h6>
                   <small class="text-muted">{{ position.ticker }}</small>
+                  <small class="text-muted"> ' </small>
+                  <small class="text-muted">{{ position.balance }} шт </small>
+                  <small class="text-muted"> · </small>
+                  <small class="text-muted">{{ position.close_price }}</small>
+                  <small class="text-muted">{{ position.currency }}</small>
                 </div>
-                <span class="text-muted">{{ position.balance }}</span>
+                <div class="float-right">
+                  <h6 class="my-0 text-md-right">
+                  <span class="text-muted">{{ '%0.1f'|format((position.close_price*position.balance)|float) }} </span>
+                  <span class="text-muted">{{ position.currency }}</span>
+                  </h6>
+
+                  {% if (position.close_price - position.open_price) < 0 %}
+                  <small class="opacity-30 text-nowrap text-danger">{{ '%0.1f'| format((position.close_price - position.open_price)|float) }}</small>
+                  <small class="opacity-30 text-nowrap text-danger">{{ position.currency }}</small>
+                  <small class="opacity-30 text-nowrap text-danger">{{ '%0.2f'| format((position.close_price/position.open_price-1)|float) }}%</small>
+                  {% else %}
+                  <small class="opacity-30 text-nowrap text-success">+{{ '%0.1f'| format((position.close_price - position.open_price)|float) }}</small>
+                  <small class="opacity-30 text-nowrap text-success">{{ position.currency }}</small>
+                  <small class="opacity-30 text-nowrap text-success">+{{ '%0.2f'| format((position.close_price/position.open_price-1)|float) }}%</small>
+                  {% endif %}
+                </div>
               </li>
+              {% set portfl_sum.sum = portfl_sum.sum + position.close_price * position.balance %}
+
             {% endfor %}
               <li class="list-group-item d-flex justify-content-between">
                 <span>Всего по счету:</span>
-                <strong>Сумма</strong>
+                <strong> {{ portfl_sum.sum  }} </strong>
               </li>
 
           </ul>
 
     </div>
   {% endfor %}
-
-    <h6 class="col-4 d-block small opacity-50 text-primary">Account: {{ portfolio_info[0].account.id }}</h6>
-    <h6 class="col-5 d-block small opacity-50">Positions: {{ portfolio_info[0].positions }}</h6>
 
 </div>
 
